# kem-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/actions/setup-nix/: action.yml
.github/workflows/: check.yml
benches/: compare.rs  mlkem.rs
bindings/mlkem-native-rs/: Cargo.toml  build.rs
bindings/mlkem-native-rs/src/: lib.rs
bindings/pqmagic-rs/: Cargo.toml  build.rs
bindings/pqmagic-rs/src/: lib.rs
crates/hash/: Cargo.toml
crates/hash/benches/: keccak.rs
crates/hash/src/: keccak.rs  keccak1x.rs  keccak4x.rs  lib.rs  prf.rs  scalar.rs  xof.rs
crates/hash/src/keccak/: mod.rs  prf.rs  scalar.rs  xof.rs
crates/hash/tests/: acvp.rs  x4_parity.rs  xn_parity.rs
crates/hash/tests/data/: .gitattributes
crates/lib/: Cargo.toml
crates/lib/benches/: compare.rs  hotpaths.rs  lane_width.rs
crates/lib/benches/common/: mod.rs
crates/lib/src/: hash.rs  kem.rs  lib.rs  params.rs  pke.rs  types.rs
crates/lib/src/math/: mod.rs  pack.rs  poly.rs  reduce.rs  sample.rs
crates/lib/src/simd/: mod.rs
crates/lib/tests/: acvp.rs  compare_mlkem_native.rs  compare_pqmagic.rs  compare_rustcrypto.rs  kat.rs  parse_validation.rs  vectors.rs  wycheproof.rs
crates/lib/tests/common/: mod.rs
crates/lib/tests/data/wycheproof/: SOURCE
crates/math/: Cargo.toml  build.rs
crates/math/benches/: primitives.rs
crates/math/src/: compress.rs  encode.rs  lib.rs  macros.rs  ntt.rs  pack.rs  poly.rs  polyvec.rs  reduce.rs  sample.rs  simd.rs
crates/math/src/poly/: mod.rs  ntt_poly.rs  polynomial.rs  polyvec.rs
crates/math/src/simd/: butterfly.rs  kernels.rs  mod.rs  ntt.rs  poly_ops.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  measure.rs  profiler.rs
src/: ct.rs  kem.rs  lib.rs  params.rs  pke.rs  types.rs
src/hash/: mod.rs
src/math/: ntt.rs  pack.rs  poly.rs  polyvec.rs  reduce.rs  sample.rs
src/simd/: mod.rs
tests/: acvp.rs  compare_rustcrypto.rs  kat.rs  vectors.rs
