[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.dependencies]
core_affinity = "0.8.3"
criterion     = "0.5.1"
hex           = "0.4.3"
serde         = { version = "1.0.228", features = ["derive"] }
serde_json    = "1.0.149"
zeroize       = { version = "1.8.2", features = ["derive"] }

kem-hash = { path = "crates/hash" }
kem-math = { path = "crates/math" }

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cargo_common_metadata    = "allow"
cast_possible_truncation = "allow"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.bench]
debug = true
