[package]
edition = "2024"
name    = "kem-hash"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
keccak = { version = "0.1.6", features = ["simd"] }

[dependencies.kem-math]
path = "../math"

[dev-dependencies]
hex        = "0.4.3"
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lib]
bench = false
