[package]
edition = "2024"
name    = "kem-hash"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
keccak = { version = "0.1.6", features = ["simd"] }

kem-math.workspace = true

[dev-dependencies]
core_affinity.workspace = true
criterion.workspace     = true
hex.workspace           = true
kem-math.workspace      = true
serde.workspace         = true
serde_json.workspace    = true

[lib]
bench = false

[[bench]]
harness = false
name    = "keccak"
