[package]
edition = "2024"
name    = "kem-hash"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
kem-math.workspace = true

[dev-dependencies]
hex.workspace        = true
kem-math.workspace   = true
kem-utils.workspace  = true
serde.workspace      = true
serde_json.workspace = true

[lib]
bench = false

[[bench]]
harness = false
name    = "keccak"
