[package]
edition = "2024"
name    = "kem-rs"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
ctutils   = "0.4.0"
rand_core = "0.10.0"
zeroize   = { version = "1.8.2", features = ["derive"] }

[dependencies.kem-hash]
path = "../hash"

[dependencies.kem-math]
path = "../math"

[dev-dependencies]
aes = "0.8.4"
core_affinity = "0.8.3"
criterion = "0.5.1"
getrandom = { version = "0.4.1", features = ["sys_rng"] }
hex = "0.4.3"
ml-kem = { version = "0.2.3", features = ["deterministic"] }
pprof = { version = "0.15.0", features = [
  "flamegraph",
  "frame-pointer",
  "criterion",
] }
rand_core = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"

[lib]
bench = false

[[bench]]
harness = false
name    = "compare"

[[bench]]
harness = false
name    = "lane_width"
