[package]
edition = "2024"
name    = "kem-rs"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
ctutils   = "0.4.0"
rand_core = "0.10.0"
zerocopy  = { version = "0.8.42", features = ["derive"] }

kem-hash.workspace = true
kem-math.workspace = true
zeroize.workspace  = true

[dev-dependencies]
aes       = "0.8.4"
getrandom = { version = "0.4.2", features = ["sys_rng"] }
ml-kem    = { version = "0.2.3", features = ["deterministic"] }
rand_core = "0.10.0"
sha2      = "0.10.9"

core_affinity.workspace = true
criterion.workspace     = true
hex.workspace           = true
serde.workspace         = true
serde_json.workspace    = true

[dev-dependencies.pprof]
features = ["flamegraph", "frame-pointer", "criterion"]
version  = "0.15.0"

[lib]
bench = false

[[bench]]
harness = false
name    = "compare"

[[bench]]
harness = false
name    = "lane_width"

[[bench]]
harness = false
name    = "hotpaths"
