[package]
edition = "2024"
name    = "kem-rs"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
ctutils   = "0.4.2"
rand_core = "0.10.0"
zerocopy  = { version = "0.8.48", features = ["derive"] }

kem-hash.workspace = true
kem-math.workspace = true
zeroize.workspace  = true

[dev-dependencies]
aes       = "0.9.0"
getrandom = { version = "0.4.2", features = ["sys_rng"] }
ml-kem    = { version = "0.2.3", features = ["deterministic"] }
nix       = { version = "0.31.2", features = ["time", "resource"] }
rand_core = "0.10.0"
sha2      = "0.11.0"

core_affinity.workspace = true
criterion.workspace     = true
hex.workspace           = true
serde.workspace         = true
serde_json.workspace    = true

mlkem-native-rs = { path = "../../bindings/mlkem-native-rs" }
pqmagic-rs      = { path = "../../bindings/pqmagic-rs" }

[dev-dependencies.pprof]
features = ["flamegraph", "frame-pointer", "criterion"]
version  = "0.15.0"

[lib]
bench = false

[[bench]]
harness = false
name    = "compare"

[[bench]]
harness = false
name    = "lane_width"

[[bench]]
harness = false
name    = "hotpaths"
