[package]
edition = "2024"
name    = "kem-math"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
zeroize.workspace = true

[dev-dependencies]
kem-utils.workspace = true

[lib]
bench = false

[[bench]]
harness = false
name    = "primitives"

[build-dependencies]
prettyplease = "0.2.37"
proc-macro2  = "1.0.106"
quote        = "1.0.45"
syn          = "2.0.117"
