[package]
edition = "2024"
name    = "kem-utils"
version = "0.1.0"

[dependencies]
core_affinity = "0.8.3"
criterion     = { version = "0.8.2", features = ["html_reports"] }
nix           = { version = "0.31.2", features = ["time"] }

[dependencies.pprof]
features = ["flamegraph", "frame-pointer", "prost-codec"]
version  = "0.15.0"

[lints]
workspace = true

[lib]
bench = false
